--- a/res/layout/activity_admin_chkq.xml
+++ b/res/layout/activity_admin_chkq.xml
@@ -42,7 +42,8 @@
         android:layout_below="@+id/textView1"
         android:layout_centerHorizontal="true"
         android:layout_marginTop="26dp"
-        android:ems="10" >
+        android:ems="10" 
+        android:inputType="number">
 
         <requestFocus />
     </EditText>
