--- a/res/layout/activity_mainquiz.xml
+++ b/res/layout/activity_mainquiz.xml
@@ -100,16 +100,12 @@
         android:layout_alignLeft="@+id/textView4"
         android:text="TextView" />
 
-    <EditText
-        android:id="@+id/editText1"
+  <TextView
+        android:id="@+id/textView6"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_alignParentLeft="true"
+        android:layout_alignParentRight="true"
         android:layout_alignParentTop="true"
-        android:ems="10"
-        android:inputType="time" >
-
-        <requestFocus />
-    </EditText>
+        android:text="TextView" />
 
 </RelativeLayout>
