Settings -delete Icon Layout Updates

--- a/res/layout/activity_main.xml
+++ b/res/layout/activity_main.xml
@@ -15,9 +15,18 @@
         android:layout_height="wrap_content"
         android:layout_alignParentBottom="true"
         android:layout_alignParentRight="true"
-        android:layout_marginBottom="61dp"
-        android:layout_marginRight="52dp"
+        android:layout_marginBottom="61dip"
+        android:layout_marginRight="52dip"
         android:text="@string/begin" />
+
+    <TextView
+        android:id="@+id/textView1"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_alignLeft="@+id/textView2"
+        android:layout_alignParentTop="true"
+        android:layout_marginTop="116dp"
+        android:text="TextView" />
 
     <TextView
         android:id="@+id/textView2"
@@ -25,16 +34,20 @@
         android:layout_height="wrap_content"
         android:layout_below="@+id/textView1"
         android:layout_centerHorizontal="true"
-        android:layout_marginTop="51dip"
+        android:layout_marginTop="48dp"
         android:text="TextView" />
 
-    <TextView
-        android:id="@+id/textView1"
+    <ImageView
+        android:id="@+id/imageView1"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_alignParentTop="true"
         android:layout_centerHorizontal="true"
-        android:layout_marginTop="150dip"
-        android:text="TextView" />
+        android:layout_marginTop="37dip"
+        android:minHeight="50dip"
+		android:minWidth="50dip"
+		android:maxHeight="150dip"
+		android:maxWidth="150dip"
+        android:src="@drawable/ic_launcher" />
 
 </RelativeLayout>
