Review question button clarified. Chq question layout modified to remove the overlap of the question with the submit button.
Signed-off-by: bazookan <aby.vinod@gmail.com>

--- a/res/layout/activity_admin_review.xml
+++ b/res/layout/activity_admin_review.xml
@@ -15,23 +15,21 @@
         android:layout_height="wrap_content"
         android:text="@string/admin_review_title" />
 
-    <EditText
-        android:id="@+id/editText1"
+    <TextView
+        android:id="@+id/textView2"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_alignLeft="@+id/textView1"
         android:layout_below="@+id/textView1"
         android:layout_marginTop="22dp"
-        android:ems="10" >
-
-        <requestFocus />
-    </EditText>
+        android:ems="10" />
+    
 
     <Button
         android:id="@+id/button1"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_below="@+id/editText1"
+        android:layout_below="@+id/textView2"
         android:layout_centerHorizontal="true"
         android:layout_marginTop="21dp"
         android:text="@string/admin_back" />
