Corrected the android:text="TextView" so that no warnings.
Signed-off-by: bazookan <aby.vinod@gmail.com>

--- a/res/layout/activity_mainquiz.xml
+++ b/res/layout/activity_mainquiz.xml
@@ -16,8 +16,7 @@
         android:layout_alignParentLeft="true"
         android:layout_alignParentTop="true"
         android:layout_marginLeft="34dip"
-        android:layout_marginTop="55dip"
-        android:text="TextView" />
+        android:layout_marginTop="55dip" />
 
     <CheckBox
         android:id="@+id/checkBox1"
@@ -61,7 +60,7 @@
         android:layout_height="wrap_content"
         android:layout_alignParentBottom="true"
         android:layout_alignRight="@+id/textView1"
-        android:text="Submit" />
+        android:text="@string/mainquiz_next" />
 
     <TextView
         android:id="@+id/textView4"
@@ -69,8 +68,7 @@
         android:layout_height="wrap_content"
         android:layout_alignBaseline="@+id/checkBox3"
         android:layout_alignBottom="@+id/checkBox3"
-        android:layout_alignLeft="@+id/textView3"
-        android:text="TextView" />
+        android:layout_alignLeft="@+id/textView3" />
 
     <TextView
         android:id="@+id/textView3"
@@ -78,8 +76,7 @@
         android:layout_height="wrap_content"
         android:layout_alignBaseline="@+id/checkBox2"
         android:layout_alignBottom="@+id/checkBox2"
-        android:layout_alignLeft="@+id/textView2"
-        android:text="TextView" />
+        android:layout_alignLeft="@+id/textView2"/>
 
     <TextView
         android:id="@+id/textView2"
@@ -88,8 +85,7 @@
         android:layout_alignBaseline="@+id/checkBox1"
         android:layout_alignBottom="@+id/checkBox1"
         android:layout_marginLeft="19dp"
-        android:layout_toRightOf="@+id/checkBox4"
-        android:text="TextView" />
+        android:layout_toRightOf="@+id/checkBox4"/>
 
     <TextView
         android:id="@+id/textView5"
@@ -97,15 +93,13 @@
         android:layout_height="wrap_content"
         android:layout_alignBaseline="@+id/checkBox4"
         android:layout_alignBottom="@+id/checkBox4"
-        android:layout_alignLeft="@+id/textView4"
-        android:text="TextView" />
+        android:layout_alignLeft="@+id/textView4"/>
 
   <TextView
         android:id="@+id/textView6"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_alignParentRight="true"
-        android:layout_alignParentTop="true"
-        android:text="TextView" />
+        android:layout_alignParentTop="true"/>
 
 </RelativeLayout>
