--- a/res/layout/activity_main.xml
+++ b/res/layout/activity_main.xml
@@ -25,8 +25,7 @@
         android:layout_height="wrap_content"
         android:layout_alignParentTop="true"
         android:layout_centerHorizontal="true"
-        android:layout_marginTop="150dp"
-        android:text="TextView" />
+        android:layout_marginTop="150dp"/>
 
     <ImageView
         android:id="@+id/imageView1"
@@ -35,7 +34,8 @@
         android:layout_alignParentTop="true"
         android:layout_centerHorizontal="true"
         android:layout_marginTop="40dp"
-        android:src="@drawable/ic_launcher" />
+        android:src="@drawable/ic_launcher" 
+        android:contentDescription="@string/main_logo"/>
 
     <TextView
         android:id="@+id/textView2"
@@ -43,7 +43,6 @@
         android:layout_height="wrap_content"
         android:layout_alignLeft="@+id/textView1"
         android:layout_below="@+id/textView1"
-        android:layout_marginTop="21dp"
-        android:text="TextView" />
+        android:layout_marginTop="21dp" />
 
 </RelativeLayout>
