--- a/res/layout/activity_user_publish.xml
+++ b/res/layout/activity_user_publish.xml
@@ -30,8 +30,7 @@
         android:layout_alignBaseline="@+id/textView1"
         android:layout_alignBottom="@+id/textView1"
         android:layout_toRightOf="@+id/textView1"
-        android:layout_marginLeft="20dip"
-        android:text="TextView" />
+        android:layout_marginLeft="20dip"/>
     
     <TextView
         android:id="@+id/textView4"
@@ -39,8 +38,7 @@
         android:layout_height="wrap_content"
         android:layout_alignBaseline="@+id/textView2"
         android:layout_alignBottom="@+id/textView2"
-        android:layout_alignLeft="@+id/textView3"
-        android:text="TextView" />
+        android:layout_alignLeft="@+id/textView3" />
 
     <TextView
         android:id="@+id/textView5"
@@ -56,8 +54,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_alignBottom="@+id/textView5"
-        android:layout_alignLeft="@+id/textView4"
-        android:text="TextView" />
+        android:layout_alignLeft="@+id/textView4"/>
         
     <TextView
         android:id="@+id/textView7"
@@ -65,8 +62,7 @@
         android:layout_height="wrap_content"
         android:layout_below="@+id/textView6"
         android:layout_marginTop="20dp"
-        android:layout_centerHorizontal="true"
-        android:text="TextView" />
+        android:layout_centerHorizontal="true"/>
     
         <Button
         android:id="@+id/button1"
