--- a/res/layout-large-port/activity_user_publish.xml
+++ b/res/layout-large-port/activity_user_publish.xml
@@ -64,14 +64,14 @@
         android:layout_below="@+id/textView6"
         android:layout_marginTop="20dp"
         android:layout_centerHorizontal="true"/>
-    
+
         <Button
-        android:id="@+id/button1"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_centerHorizontal="true"
-        android:layout_below="@+id/textView7"
-        android:layout_marginTop="20dip"
-        android:text="@string/user_ps_publish" />
+            android:id="@+id/button1"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_below="@+id/textView7"
+            android:layout_centerHorizontal="true"
+            android:layout_marginTop="189dp"
+            android:text="@string/user_ps_publish" />
     
 </RelativeLayout>
