--- a/res/layout-large-land/activity_admin_quest_confirm.xml
+++ b/res/layout-large-land/activity_admin_quest_confirm.xml
@@ -73,9 +73,9 @@
         android:id="@+id/textView7"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_above="@+id/button1"
+        android:layout_below="@+id/textView6"
         android:layout_centerHorizontal="true"
-        android:layout_marginBottom="38dp"
+        android:layout_marginTop="27dp"
         android:text="TextView" />
 
 </RelativeLayout>
