--- a/res/layout-large-port/activity_settings.xml
+++ b/res/layout-large-port/activity_settings.xml
@@ -17,7 +17,10 @@
         android:layout_alignParentTop="true"
         android:layout_marginTop="48dp"
         android:ems="10" 
-        android:hint="@string/settings"/>
+        android:hint="@string/settings"
+        android:textColorHint="#555">
+        <requestFocus />
+        </EditText>
 
     <EditText
         android:id="@+id/editText2"
