--- a/res/layout/activity_admin_chkq.xml
+++ b/res/layout/activity_admin_chkq.xml
@@ -29,15 +29,6 @@
         android:inputType="number">
         <requestFocus />
     </EditText>
-    
-    <Button
-        android:id="@+id/button1"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_below="@+id/editText1"
-        android:layout_centerHorizontal="true"
-        android:layout_marginTop="20dip"
-        android:text="@string/submit" />
 	
 	<TextView
         android:id="@+id/textView2"
@@ -56,5 +47,24 @@
         android:layout_centerHorizontal="true"
         android:layout_marginTop="20dip"
         android:text="@string/admin_back" />
+
+    <Button
+        android:id="@+id/button1"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_below="@+id/editText1"
+        android:layout_marginTop="23dip"
+        android:layout_marginLeft="40dip"
+        android:text="@string/admin_check" />
+
+    <Button
+        android:id="@+id/button3"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_above="@+id/textView2"
+        android:layout_alignParentRight="true"
+        android:layout_alignBaseline="@+id/button1"
+        android:layout_marginRight="40dip"
+        android:text="@string/delete" />
 
 </RelativeLayout>
