Settings page made awesome. :) Now, it is compulsory to have a name and id. settingsDBadapter.Name settingsDBadapter.ID contains the details available to the world do set.updatemem() before using them though.
Delete functionality perfected. :)
xml files updated
debugging now has file name specific approach

MainActivity now sees if settings are there and if not takes you there
first.
Signed-off-by: bazookan <aby.vinod@gmail.com>

--- a/res/layout-large-land/activity_settings.xml
+++ b/res/layout-large-land/activity_settings.xml
@@ -17,7 +17,7 @@
         android:layout_alignParentTop="true"
         android:layout_marginTop="48dp"
         android:ems="10" 
-        android:hint="@string/settings"
+        android:hint="@string/settings_name"
         android:textColorHint="#555">
         <requestFocus />
         </EditText>
