--- a/res/layout-land/activity_admin_chkq.xml
+++ b/res/layout-land/activity_admin_chkq.xml
@@ -31,16 +31,7 @@
         <requestFocus />
     </EditText>
     
-    <Button
-        android:id="@+id/button1"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_below="@+id/editText1"
-        android:layout_centerHorizontal="true"
-        android:layout_marginTop="20dip"
-        android:text="@string/submit" />
-	
-	<TextView
+    <TextView
         android:id="@+id/textView2"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
@@ -57,5 +48,21 @@
         android:layout_centerHorizontal="true"
         android:layout_marginTop="20dip"
         android:text="@string/admin_back" />
+    
+    <Button
+        android:id="@+id/button1"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_below="@+id/editText1"
+        android:layout_alignLeft="@+id/editText1"
+        android:text="@string/admin_check" />
+	<Button
+        android:id="@+id/button3"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_alignBaseline="@+id/button1"
+        android:layout_alignRight="@+id/editText1"
+        android:text="@string/delete" />
 
+    
 </RelativeLayout>
