--- a/res/layout-large-port/activity_admin_chkq.xml
+++ b/res/layout-large-port/activity_admin_chkq.xml
@@ -31,22 +31,13 @@
         <requestFocus />
     </EditText>
     
-    <Button
-        android:id="@+id/button1"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_below="@+id/editText1"
-        android:layout_centerHorizontal="true"
-        android:layout_marginTop="20dip"
-        android:text="@string/submit" />
-	
 	<TextView
         android:id="@+id/textView2"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_below="@+id/button1"
         android:layout_centerHorizontal="true"
-        android:layout_marginTop="20dip"
+        android:layout_marginTop="30dip"
         android:text="@string/admin_chkq_hint" />
 
     <Button
@@ -55,7 +46,23 @@
         android:layout_height="wrap_content"
         android:layout_below="@+id/textView2"
         android:layout_centerHorizontal="true"
-        android:layout_marginTop="20dip"
+        android:layout_marginTop="50dip"
         android:text="@string/admin_back" />
-
+<Button
+        android:id="@+id/button1"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_below="@+id/editText1"
+        android:layout_marginTop="50dip"
+        android:layout_alignLeft="@+id/editText1"
+        android:text="@string/admin_check" />
+	
+	<Button
+        android:id="@+id/button3"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_alignBaseline="@+id/button1"
+        android:layout_alignRight="@+id/editText1"
+        android:text="@string/delete" />
+    
 </RelativeLayout>
