--- a/res/layout/activity_admin_chkq.xml
+++ b/res/layout/activity_admin_chkq.xml
@@ -33,11 +33,13 @@
 	
 	<TextView
         android:id="@+id/textView2"
-        android:layout_width="wrap_content"
+        android:layout_width="fill_parent"
         android:layout_height="wrap_content"
         android:layout_below="@+id/button1"
         android:layout_centerHorizontal="true"
         android:layout_marginTop="20dip"
+        android:textAlignment="center"
+        android:gravity="center"
         android:text="@string/admin_chkq_hint" />
 
     <Button
