--- a/res/layout/activity_admin_quest_confirm.xml
+++ b/res/layout/activity_admin_quest_confirm.xml
@@ -22,7 +22,7 @@
         android:layout_alignLeft="@+id/textView3"
         android:layout_below="@+id/textView3"
         android:layout_marginTop="20dp"
-        android:text="TextView" />
+        android:text="@string/TextView" />
 
     <TextView
         android:id="@+id/textView5"
@@ -31,7 +31,7 @@
         android:layout_alignLeft="@+id/textView4"
         android:layout_below="@+id/textView4"
         android:layout_marginTop="20dp"
-        android:text="TextView" />
+        android:text="@string/TextView" />
 
     <TextView
         android:id="@+id/textView6"
@@ -40,7 +40,7 @@
         android:layout_alignLeft="@+id/textView5"
         android:layout_below="@+id/textView5"
         android:layout_marginTop="20dp"
-        android:text="TextView" />
+        android:text="@string/TextView" />
 
     <Button
         android:id="@+id/button1"
@@ -58,16 +58,16 @@
         android:layout_above="@+id/button1"
         android:layout_centerHorizontal="true"
         android:layout_marginBottom="54dp"
-        android:text="TextView" />
+        android:text="@string/TextView" />
 
     <TextView
         android:id="@+id/textView2"
-        android:layout_width="fill_parent"
+        android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_alignLeft="@+id/textView3"
+        android:layout_centerHorizontal="true"
         android:layout_below="@+id/textView1"
         android:layout_marginTop="25dp"
-        android:text="TextView" />
+        android:text="@string/TextView" />
 
     <TextView
         android:id="@+id/textView3"
@@ -75,7 +75,7 @@
         android:layout_height="wrap_content"
         android:layout_alignLeft="@+id/textView1"
         android:layout_below="@+id/textView2"
-        android:layout_marginTop="46dp"
-        android:text="TextView" />
+        android:layout_marginTop="40dp"
+        android:text="@string/TextView" />
 
 </RelativeLayout>
