Scrolling also implemented in land version of admin_chkq
Signed-off-by: bazookan <aby.vinod@gmail.com>

--- a/res/layout-large-port/activity_admin_chkq.xml
+++ b/res/layout-large-port/activity_admin_chkq.xml
@@ -33,10 +33,12 @@
     
 	<TextView
         android:id="@+id/textView2"
-        android:layout_width="wrap_content"
+        android:layout_width="fill_parent"
         android:layout_height="wrap_content"
         android:layout_below="@+id/button1"
         android:layout_centerHorizontal="true"
+        android:textAlignment="center"
+        android:gravity="center"
         android:layout_marginTop="30dip"
         android:text="@string/admin_chkq_hint" />
 
