--- a/res/layout-land/activity_admin_review.xml
+++ b/res/layout-land/activity_admin_review.xml
@@ -28,10 +28,19 @@
         android:id="@+id/button1"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_alignParentBottom="true"
-        android:layout_alignParentRight="true"
-        android:layout_marginBottom="28dp"
-        android:layout_marginRight="64dp"
-        android:text="@string/admin_back" />
+        android:layout_below="@+id/textView2"
+        android:layout_centerHorizontal="true"
+        android:text="@string/delete_all" />
+    
+        <Button
+        android:id="@+id/button2"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_below="@+id/textView2"
+    	android:layout_alignBaseline="@+id/button1"
+        android:text="@string/admin_back" 
+        android:layout_toRightOf="@+id/button1"
+        android:layout_marginLeft="20dip" />
+ 
 
 </RelativeLayout>
