--- a/res/layout-large-port/activity_admin_review.xml
+++ b/res/layout-large-port/activity_admin_review.xml
@@ -25,13 +25,24 @@
         android:ems="10" />
     
 
-    <Button
+	 <Button
         android:id="@+id/button1"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_below="@+id/textView2"
         android:layout_centerHorizontal="true"
         android:layout_marginTop="21dp"
-        android:text="@string/admin_back" />
-
+        android:text="@string/delete_all" />
+    
+    <Button
+        android:id="@+id/button2"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_below="@+id/textView2"
+    	android:layout_alignBaseline="@+id/button1"
+        android:text="@string/admin_back" 
+        android:layout_toRightOf="@+id/button1"
+        android:layout_marginLeft="20dip" />
+   
+    
 </RelativeLayout>
