--- a/res/layout-land/activity_admin_cp.xml
+++ b/res/layout-land/activity_admin_cp.xml
@@ -1,7 +1,12 @@
-<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
+    android:id="@+id/ScrollView01"
+    android:layout_width="fill_parent"
+    android:layout_height="fill_parent" >
+
+<RelativeLayout
     android:layout_width="match_parent"
-    android:layout_height="match_parent"
+    android:layout_height="wrap_content"
     android:paddingBottom="@dimen/activity_vertical_margin"
     android:paddingLeft="@dimen/activity_horizontal_margin"
     android:paddingRight="@dimen/activity_horizontal_margin"
@@ -115,9 +120,9 @@
         android:id="@+id/button1"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_alignParentBottom="true"
+        android:layout_below="@+id/editText4"
         android:layout_centerHorizontal="true"
-        android:layout_marginBottom="40dip"
+        android:layout_marginTop="40dip"
         android:text="@string/admin_quest_upd" />
 
     <Button
@@ -126,7 +131,8 @@
         android:layout_height="wrap_content"
         android:layout_alignBottom="@+id/button1"
         android:layout_toLeftOf="@+id/button1"
-        android:layout_marginRight="2dip"
+        android:layout_marginRight="10dip"
         android:text="@string/populate" />
 
 </RelativeLayout>
+</ScrollView>
