--- a/res/layout-land/activity_admin_quest_confirm.xml
+++ b/res/layout-land/activity_admin_quest_confirm.xml
@@ -22,7 +22,7 @@
         android:layout_alignLeft="@+id/textView3"
         android:layout_below="@+id/textView3"
         android:layout_marginTop="20dp"
-        android:text="TextView" />
+        android:text="@string/TextView" />
 
     <TextView
         android:id="@+id/textView6"
@@ -31,7 +31,7 @@
         android:layout_alignLeft="@+id/textView5"
         android:layout_below="@+id/textView5"
         android:layout_marginTop="20dp"
-        android:text="TextView" />
+        android:text="@string/TextView" />
 
     <TextView
         android:id="@+id/textView2"
@@ -40,7 +40,7 @@
         android:layout_alignLeft="@+id/textView3"
         android:layout_below="@+id/textView1"
         android:layout_marginTop="25dp"
-        android:text="TextView" />
+        android:text="@string/TextView" />
 
     <Button
         android:id="@+id/button1"
@@ -56,7 +56,7 @@
         android:layout_height="wrap_content"
         android:layout_alignLeft="@+id/button1"
         android:layout_below="@+id/textView3"
-        android:text="TextView" />
+        android:text="@string/TextView" />
 
     <TextView
         android:id="@+id/textView5"
@@ -64,7 +64,7 @@
         android:layout_height="wrap_content"
         android:layout_alignRight="@+id/textView1"
         android:layout_centerVertical="true"
-        android:text="TextView" />
+        android:text="@string/TextView" />
 
     <TextView
         android:id="@+id/textView3"
@@ -72,6 +72,6 @@
         android:layout_height="wrap_content"
         android:layout_above="@+id/textView6"
         android:layout_alignLeft="@+id/textView1"
-        android:text="TextView" />
+        android:text="@string/TextView" />
 
 </RelativeLayout>
