--- a/res/layout-large-land/activity_admin_cp.xml
+++ b/res/layout-large-land/activity_admin_cp.xml
@@ -105,8 +105,9 @@
     
     <EditText
         android:id="@+id/editText4"
-        android:layout_width="fill_parent"
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
+        android:layout_centerHorizontal="true"
         android:layout_below="@+id/textView6"
         android:layout_marginTop="12dip"
         android:inputType="textMultiLine" />
@@ -126,7 +127,7 @@
         android:layout_height="wrap_content"
         android:layout_alignBottom="@+id/button1"
         android:layout_toLeftOf="@+id/button1"
-        android:layout_marginRight="2dip"
+        android:layout_marginRight="10dip"
         android:text="@string/populate" />
 
 </RelativeLayout>
