--- a/res/layout-large-port/activity_admin_cp.xml
+++ b/res/layout-large-port/activity_admin_cp.xml
@@ -20,9 +20,9 @@
         android:id="@+id/textView2"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_alignLeft="@+id/textView1"
+        android:layout_marginLeft="40dip"
         android:layout_below="@+id/textView1"
-        android:layout_marginTop="20dip"
+        android:layout_marginTop="40dip"
         android:text="@string/admin_cp_name" />
 
     <TextView
@@ -31,7 +31,7 @@
         android:layout_height="wrap_content"
         android:layout_alignRight="@+id/textView2"
         android:layout_below="@+id/textView2"
-        android:layout_marginTop="20dip"
+        android:layout_marginTop="40dip"
         android:text="@string/admin_cp_qn" />
 
     <TextView
@@ -40,7 +40,7 @@
         android:layout_height="wrap_content"
         android:layout_alignRight="@+id/textView3"
         android:layout_below="@+id/textView3"
-        android:layout_marginTop="20dip"
+        android:layout_marginTop="40dip"
         android:text="@string/admin_cp_time" />
 
     <TextView
@@ -49,7 +49,7 @@
         android:layout_height="wrap_content"
         android:layout_alignRight="@+id/textView4"
         android:layout_below="@+id/textView4"
-        android:layout_marginTop="20dip"
+        android:layout_marginTop="40dip"
         android:text="@string/admin_cp_deadl" />
 
     <TextView
@@ -58,7 +58,7 @@
         android:layout_height="wrap_content"
         android:layout_below="@+id/textView5"
         android:layout_alignRight="@+id/textView5"
-        android:layout_marginTop="20dip"
+        android:layout_marginTop="40dip"
         android:text="@string/admin_cp_syllabus" />
 
     <EditText
@@ -67,7 +67,7 @@
         android:layout_height="wrap_content"
         android:layout_alignBottom="@+id/textView2"
         android:layout_toRightOf="@+id/textView2"
-        android:layout_marginLeft="20dip"
+        android:layout_marginLeft="40dip"
         android:inputType="text">
         <requestFocus />
     </EditText>
@@ -105,12 +105,12 @@
     
     <EditText
         android:id="@+id/editText4"
-        android:layout_width="fill_parent"
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_below="@+id/textView6"
         android:layout_marginTop="12dip"
         android:inputType="textMultiLine" />
-
+    
     <Button
         android:id="@+id/button1"
         android:layout_width="wrap_content"
@@ -126,7 +126,7 @@
         android:layout_height="wrap_content"
         android:layout_alignBottom="@+id/button1"
         android:layout_toLeftOf="@+id/button1"
-        android:layout_marginRight="2dip"
+        android:layout_marginRight="10dip"
         android:text="@string/populate" />
 
 </RelativeLayout>
