--- a/res/layout/activity_admin_review.xml
+++ b/res/layout/activity_admin_review.xml
@@ -17,12 +17,13 @@
 
     <TextView
         android:id="@+id/textView2"
-        android:layout_width="wrap_content"
+        android:layout_width="fill_parent"
         android:layout_height="wrap_content"
-        android:layout_alignLeft="@+id/textView1"
+        android:layout_centerHorizontal="true"
         android:layout_below="@+id/textView1"
         android:layout_marginTop="22dp"
-        android:ems="10" />
+        android:ems="10" 
+        android:gravity="center"/>
     
 
     <Button
