--- a/res/layout-land/activity_user_landing.xml
+++ b/res/layout-land/activity_user_landing.xml
@@ -1,7 +1,12 @@
-<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
+    android:id="@+id/ScrollView01"
+    android:layout_width="fill_parent"
+    android:layout_height="fill_parent" >
+
+<RelativeLayout
     android:layout_width="match_parent"
-    android:layout_height="match_parent"
+    android:layout_height="wrap_content"
     android:background="@drawable/startquiz"
     android:paddingBottom="@dimen/activity_vertical_margin"
     android:paddingLeft="@dimen/activity_horizontal_margin"
@@ -13,7 +18,9 @@
         android:id="@+id/textView1"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="@string/user_lp_text" />
+        android:text="@string/user_lp_text"  
+        android:layout_centerHorizontal="true"
+        android:gravity="center"/>
 
     <Button
         android:id="@+id/button1"
@@ -25,3 +32,4 @@
         android:text="@string/user_lp_cont" />
 
 </RelativeLayout>
+</ScrollView>
