--- a/res/layout/activity_user_landing.xml
+++ b/res/layout/activity_user_landing.xml
@@ -13,7 +13,9 @@
         android:id="@+id/textView1"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="@string/user_lp_text" />
+        android:text="@string/user_lp_text" 
+        android:layout_centerHorizontal="true"
+        android:gravity="center"/>
 
     <Button
         android:id="@+id/button1"
