1. Import/export facility added 2. You can only handle 1 QB at a time 3. User_base and Admin_base updated correspondingly 4. To do list updated
Signed-off-by: bazookan <aby.vinod@gmail.com>

--- a/res/layout/activity_admin_base.xml
+++ b/res/layout/activity_admin_base.xml
@@ -42,4 +42,13 @@
         android:layout_marginTop="30dip"
         android:text="@string/admin_base_revw" />
 
+    <Button
+        android:id="@+id/button3"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_below="@+id/buttonx2"
+        android:layout_centerHorizontal="true"
+        android:layout_marginTop="29dp"
+        android:text="@string/admin_base_export" />
+
 </RelativeLayout>
