1. Closed all cursors after every use to quicken the system. 2. Integrated Ankit's codes but haven't put them to use 3. Previous button installed and ensured working 	1. There are occasional bugs in the scoring where multiple inserts happen for the same question. Kindly watch out. 4. None of the other layouts are updated. Need to update them asap.
Signed-off-by: root <root@Legacy>

--- a/res/layout/activity_mainquiz.xml
+++ b/res/layout/activity_mainquiz.xml
@@ -110,5 +110,13 @@
         android:layout_alignBottom="@+id/checkBox4"
         android:layout_alignLeft="@+id/textView4"
         android:text="@string/TextView" />
+
+    <Button
+        android:id="@+id/button3"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_alignBottom="@+id/button1"
+        android:layout_centerHorizontal="true"
+        android:text="@string/mainquiz_img" />
  
 </RelativeLayout>
