--- a/res/layout-xlarge-land/activity_dblist.xml
+++ b/res/layout-xlarge-land/activity_dblist.xml
@@ -2,6 +2,7 @@
 <TextView xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="fill_parent"
     android:layout_height="fill_parent"
+    android:textSize="20sp"
     android:padding="10dp"
-    android:textSize="20sp" android:background="@drawable/publish">
+    >
 </TextView>
