--- a/res/layout-land/activity_fullscreen.xml
+++ b/res/layout-land/activity_fullscreen.xml
@@ -49,7 +49,7 @@
             <Button
                 android:id="@+id/dummy_button"
                 style="?buttonBarButtonStyle"
-                android:layout_width="0dp"
+                android:layout_width="0dip"
                 android:layout_height="wrap_content"
                 android:layout_weight="1"
                 android:text="@string/admin_back" />
