--- a/res/layout-land/activity_main.xml
+++ b/res/layout-land/activity_main.xml
@@ -15,7 +15,7 @@
         android:layout_height="wrap_content"
         android:layout_alignLeft="@+id/textView1"
         android:layout_below="@+id/textView1"
-        android:layout_marginTop="21dp"
+        android:layout_marginTop="21dip"
         android:textSize="20sp"
         android:gravity="center_horizontal"
         android:text="text2" />
@@ -25,7 +25,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_centerVertical="true"
-        android:layout_marginLeft="64dp"
+        android:layout_marginLeft="64dip"
         android:layout_toRightOf="@+id/imageView1"
         android:textSize="20sp"
         android:gravity="center_horizontal"
@@ -37,8 +37,8 @@
         android:layout_height="wrap_content"
         android:layout_above="@+id/textView1"
         android:layout_alignParentLeft="true"
-        android:layout_marginBottom="32dp"
-        android:layout_marginLeft="53dp"
+        android:layout_marginBottom="32dip"
+        android:layout_marginLeft="53dip"
         android:contentDescription="@string/main_logo"
         android:src="@drawable/ic_launcher" />
 
