--- a/res/layout-xlarge-land/activity_dblist.xml
+++ b/res/layout-xlarge-land/activity_dblist.xml
@@ -3,6 +3,6 @@
     android:layout_width="fill_parent"
     android:layout_height="fill_parent"
     android:textSize="20sp"
-    android:padding="10dp"
+    android:padding="10dip"
     >
 </TextView>
