--- a/res/layout-xlarge-land/activity_user_publish.xml
+++ b/res/layout-xlarge-land/activity_user_publish.xml
@@ -62,7 +62,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_below="@+id/textView6"
-        android:layout_marginTop="20dp"
+        android:layout_marginTop="20dip"
         android:layout_centerHorizontal="true"/>
     
         <Button
