--- a/res/layout-xlarge/activity_main.xml
+++ b/res/layout-xlarge/activity_main.xml
@@ -15,7 +15,7 @@
         android:layout_height="wrap_content"
         android:layout_alignLeft="@+id/textView1"
         android:layout_below="@+id/textView1"
-        android:layout_marginTop="85dp"
+        android:layout_marginTop="85dip"
         android:text="text2"
         android:textSize="50sp" />
 
@@ -25,7 +25,7 @@
         android:layout_height="150dip"
         android:layout_alignParentTop="true"
         android:layout_centerHorizontal="true"
-        android:layout_marginTop="92dp"
+        android:layout_marginTop="92dip"
         android:contentDescription="@string/main_logo"
         android:src="@drawable/ic_launcher" />
 
@@ -35,7 +35,7 @@
         android:layout_height="wrap_content"
         android:layout_below="@+id/imageView1"
         android:layout_centerHorizontal="true"
-        android:layout_marginTop="197dp"
+        android:layout_marginTop="197dip"
         android:text="text1"
         android:textSize="50sp" />
 
