--- a/res/layout/activity_admin.xml
+++ b/res/layout/activity_admin.xml
@@ -24,7 +24,7 @@
         android:layout_height="wrap_content"
         android:layout_alignLeft="@+id/button1"
         android:layout_below="@+id/button1"
-        android:layout_marginTop="48dp"
+        android:layout_marginTop="48dip"
         android:text="@string/settings" />
 
 </RelativeLayout>
