--- a/res/layout/activity_mainquiz.xml
+++ b/res/layout/activity_mainquiz.xml
@@ -1,7 +1,12 @@
-<RelativeLayout xmlns:tools="http://schemas.android.com/tools"
-    xmlns:android="http://schemas.android.com/apk/res/android"
+<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:tools="http://schemas.android.com/tools"
+    android:id="@+id/ScrollView01"
+    android:layout_width="fill_parent"
+    android:layout_height="wrap_content" >
+    
+<RelativeLayout 
     android:layout_width="match_parent"
-    android:layout_height="match_parent"
+    android:layout_height="wrap_content"
     android:background="@drawable/back"
     android:paddingBottom="@dimen/activity_vertical_margin"
     android:paddingLeft="@dimen/activity_horizontal_margin"
@@ -99,7 +104,7 @@
         android:layout_height="wrap_content"
         android:layout_alignBaseline="@+id/checkBox1"
         android:layout_alignBottom="@+id/checkBox1"
-        android:layout_marginLeft="19dp"
+        android:layout_marginLeft="19dip"
         android:layout_toRightOf="@+id/checkBox4"
         android:text="@string/TextView" />
     <TextView
@@ -121,3 +126,4 @@
         android:text="@string/mainquiz_img" />
  
 </RelativeLayout>
+</ScrollView>
