--- a/res/layout/activity_settings.xml
+++ b/res/layout/activity_settings.xml
@@ -1,7 +1,12 @@
-<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
+    android:id="@+id/ScrollView01"
+    android:layout_width="fill_parent"
+    android:layout_height="wrap_content" >
+    
+<RelativeLayout 
     android:layout_width="match_parent"
-    android:layout_height="match_parent"
+    android:layout_height="wrap_content"
     android:background="@drawable/set"
     android:paddingBottom="@dimen/activity_vertical_margin"
     android:paddingLeft="@dimen/activity_horizontal_margin"
@@ -15,7 +20,7 @@
         android:layout_height="wrap_content"
         android:layout_alignParentLeft="true"
         android:layout_alignParentTop="true"
-        android:layout_marginTop="48dp"
+        android:layout_marginTop="48dip"
         android:ems="10" 
         android:hint="@string/settings_name"
         android:textColorHint="#555">
@@ -28,7 +33,7 @@
         android:layout_height="wrap_content"
         android:layout_alignParentLeft="true"
         android:layout_below="@+id/editText1"
-        android:layout_marginTop="30dp"
+        android:layout_marginTop="30dip"
         android:ems="10" 
         android:hint="@string/settings_id"
         android:textColorHint="#555"/>
@@ -39,7 +44,7 @@
         android:layout_height="wrap_content"
         android:layout_alignParentLeft="true"
         android:layout_below="@+id/editText2"
-        android:layout_marginTop="30dp"
+        android:layout_marginTop="30dip"
         android:ems="10" 
         android:hint="@string/settings_url"
         android:textColorHint="#555"/>
@@ -50,7 +55,7 @@
         android:layout_height="wrap_content"
         android:layout_alignLeft="@+id/editText3"
         android:layout_below="@+id/editText3"
-        android:layout_marginTop="30dp"
+        android:layout_marginTop="30dip"
         android:text="@string/timer" />
 
     <CheckBox
@@ -67,7 +72,8 @@
         android:layout_height="wrap_content"
         android:layout_alignLeft="@+id/checkBox2"
         android:layout_below="@+id/checkBox2"
-        android:layout_marginTop="64dp"
+        android:layout_marginTop="64dip"
         android:text="@string/submit" />
     
 </RelativeLayout>
+</ScrollView>
